js/js.translator/testData/incremental/invalidationWithPL/removeSupertypeUsedFromConsumer/main/test.0.kt
import sample.Base

class Derived : Base()

fun test(): Int {
    return try {
        Derived().value()
    } catch (e: Error) {
        1
    }
}
